# gltfspot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile-win.bat
include/: Gltf.h
include/gltfspot/: Bounds.h  Camera.h  Gltf.h  Image.h  Light.h  Material.h  Mesh.h  Node.h  Sampler.h  Script.h  Texture.h
include/spot/gltf/: Bounds.h  Camera.h  Gltf.h  Material.h  Mesh.h  animation.h  bounds.h  buffer.h  gltf.h  handle.h  image.h  light.h  material.h  mesh.h  node.h  sampler.h  script.h  texture.h
source/: Bounds.cpp  Gltf.cpp  Mesh.cpp  Node.cpp
src/: animation.cc  bounds.cc  bounds.cpp  buffer.cc  gltf.cc  gltf.cpp  material.cc  mesh.cc  mesh.cpp  node.cc  node.cpp  texture.cc
test/: CMakeLists.txt  GltfFiles.cmake  Tests.cmake  gst-test.cpp  tests.cmake
test/src/: handle.cc  test-gltf.cc
